--- a/stack.yml
+++ b/stack.yml
@@ -7,8 +7,10 @@ services:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
     restart: always
+    ports:
+      - 3306:3306
     environment:
-      MYSQL_DATABASE: db
+      MYSQL_DATABASE: "h1"
       MYSQL_ROOT_PASSWORD: "example"
 
   adminer:
